# MothPriest

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py  speedBuffer.py
mothpriest/: __main__.py  core.py
mothpriest/buffers/: core.py
mothpriest/macros/: core.py
mothpriest/parsers/: core.py
mothpriest/references/: core.py
mothpriest/testing/: parser_test.py
